[package]
name = "poker-solver"
version = "0.1.0"
authors = ["fk <820174048@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.70"
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poker_benchmark"
harness = false

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"